[package]
name = "croncat-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
color-eyre = "0.6.2"
futures = "0.3.24"
futures-retry = "0.6.0"
snafu = "0.7.2"
structopt = "0.3.26"
tendermint = "0.25.0"
tendermint-rpc = { version = "0.25.0", features = ["websocket-client", "http-client", "async-tungstenite", "tracing-subscriber", "tokio"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-retry = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
delegate = "0.8.0"
