[package]
name = "croncat-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.3"
base64 = "0.13.0"
chrono = "0.4.22"
color-eyre = "0.6.2"
convert_case = "0.6.0"
croncat-pipeline = { git = "https://github.com/CronCats/croncat-pipeline" }
delegate = "0.8.0"
enum-display = "0.1.3"
futures = "0.3.24"
futures-retry = "0.6.0"
glob = "0.3.0"
indoc = "1.0.7"
regex = "1.6.0"
sea-orm = { version = "0.9.3", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_yaml = "0.9.13"
sha2 = "0.10.6"
snafu = "0.7.2"
structopt = "0.3.26"
tendermint = "0.25.0"
tendermint-rpc = { version = "0.25.0", features = ["websocket-client", "http-client", "async-tungstenite", "tracing-subscriber", "tokio"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-retry = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
rusty-hook = "^0.11.2"
